# DTB_exersive_DHT22

./: .gitignore  CMakeLists.txt  ER diagram - excersize.drawio  ER-diagram-sensor-monitoring.md  FILE_INDEX.md  GETTING_STARTED.md  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_FLOWCHART.txt  Untitled Diagram.drawio  WIRING_GUIDE.md  dht22.h  queries.sql  schema.sql  schema_sqlite.sql  sensor-monitoring.mermaid  sensor_monitor.cpp  setup.sh  test_dht22.cpp
